test/modules/use/parentSymRequiresUse2.good
parentSymRequiresUse2.chpl:3: In module 'N':
parentSymRequiresUse2.chpl:4: error: unresolved call 'foo()'
parentSymRequiresUse2.chpl:4: note: because no functions named foo found in scope
